--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -6,13 +6,25 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:id="@+id/mainHolder">
 
-    <fragment android:id="@+id/fragment"
-              android:name="test.humanity.networkwrappertest.MainActivityFragment"
-              tools:layout="@layout/fragment_main"
-              android:layout_width="0dp"
-              android:layout_height="match_parent"
-              android:layout_weight="1"/>
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
 
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar"
+            android:layout_centerInParent="true"/>
+
+        <fragment android:id="@+id/fragment"
+            android:name="test.humanity.networkwrappertest.MainActivityFragment"
+            tools:layout="@layout/fragment_main"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"/>
+
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/fragmentDetail"
@@ -20,13 +32,5 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_weight="2"/>
-
-    <ProgressBar
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/progressBar"
-        android:visibility="gone"
-        android:layout_centerInParent="true"/>
 
 </LinearLayout>
